# rustyfarian-network

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  VISION.md  deny.toml  justfile  maintenance-plan.md  release-plan.md  sdkconfig.defaults
.cargo/: config.toml.dist
crates/esp32-mqtt-manager/: Cargo.toml
crates/esp32-mqtt-manager/src/: lib.rs
crates/esp32-wifi-manager/: Cargo.toml
crates/esp32-wifi-manager/src/: lib.rs
crates/espnow-pure/: Cargo.toml
crates/espnow-pure/src/: lib.rs  mock.rs  tracker.rs
crates/juggler/: Cargo.toml  README.md
crates/juggler/src/: backoff.rs  lib.rs  status_colors.rs
crates/juggler/src/espnow/: command.rs  mock.rs  mod.rs  tracker.rs
crates/juggler/src/lora/: config.rs  lorawan.rs  mock.rs  mod.rs
crates/juggler/src/mqtt/: mod.rs
crates/juggler/src/ota/: metadata.rs  mod.rs  verifier.rs  version.rs
crates/juggler/src/provisioning/: config.rs  error.rs  form.rs  html_json_escape.rs  mod.rs  profile.rs  ssid.rs  state.rs  templates.rs
crates/juggler/src/provisioning/assets/: portal_wifi_mqtt.html
crates/juggler/src/wifi/: mock.rs  mod.rs
crates/juggler/tests/: public_paths.rs
crates/lora-pure/: Cargo.toml
crates/lora-pure/src/: commands.rs  lib.rs  lorawan.rs  mock.rs
crates/ota-pure/: Cargo.toml
crates/ota-pure/src/: error.rs  lib.rs  metadata.rs  state.rs  verifier.rs  version.rs
crates/provisioning-pure/: Cargo.toml
crates/provisioning-pure/src/: config.rs  error.rs  form.rs  html_json_escape.rs  lib.rs  profile.rs  state.rs  templates.rs
crates/provisioning-pure/src/assets/: portal_lorawan.html
crates/rustyfarian-esp-hal-lora/: Cargo.toml
crates/rustyfarian-esp-hal-lora/examples/: hal_esp32s3_join.rs
crates/rustyfarian-esp-hal-lora/src/: driver.rs  lib.rs
crates/rustyfarian-esp-hal-network/: Cargo.toml  README.md
crates/rustyfarian-esp-hal-network/examples/: hal_c3_connect_async.rs  hal_c3_connect_async_led.rs  hal_c3_provision_mqtt.rs  hal_c6_connect_async_led.rs  hal_c6_provision_mqtt.rs
crates/rustyfarian-esp-hal-network/src/: lib.rs
crates/rustyfarian-esp-hal-network/src/lora/: driver.rs  mod.rs
crates/rustyfarian-esp-hal-network/src/ota/: http.rs  manager.rs  mod.rs  stub.rs
crates/rustyfarian-esp-hal-network/src/provisioning/: dhcp.rs  dns_catchall.rs  mod.rs  portal.rs  record.rs  session.rs  store.rs
crates/rustyfarian-esp-hal-network/src/wifi/: mod.rs
crates/rustyfarian-esp-hal-network/tests/: library_invariants.rs
crates/rustyfarian-esp-hal-ota/: Cargo.toml
crates/rustyfarian-esp-hal-ota/src/: http.rs  lib.rs  manager.rs  stub.rs
crates/rustyfarian-esp-hal-provisioning/: Cargo.toml
crates/rustyfarian-esp-hal-provisioning/examples/: hal_c3_provision_mqtt.rs  hal_c6_provision_mqtt.rs
crates/rustyfarian-esp-hal-provisioning/src/: dhcp.rs  dns_catchall.rs  lib.rs  portal.rs  record.rs  session.rs  store.rs
crates/rustyfarian-esp-hal-provisioning/tests/: library_invariants.rs
crates/rustyfarian-esp-hal-wifi/: Cargo.toml
crates/rustyfarian-esp-hal-wifi/examples/: hal_c3_ap_smoke.rs  hal_c3_connect.rs  hal_c3_connect_async.rs  hal_c3_connect_async_led.rs  hal_c3_wifi_raw.rs  hal_c6_connect.rs  hal_c6_connect_async_led.rs  hal_c6_connect_nonblocking_rgb.rs  hal_c6_wifi_raw.rs
crates/rustyfarian-esp-hal-wifi/src/: dhcp.rs  dns_catchall.rs  http_server.rs  lib.rs
crates/rustyfarian-esp-idf-espnow/: Cargo.toml  build.rs
crates/rustyfarian-esp-idf-espnow/examples/: idf_c3_espnow_coordinator.rs  idf_c3_espnow_scout.rs  idf_c3_espnow_scout_promisc.rs  idf_c3_espnow_sta_scout.rs
crates/rustyfarian-esp-idf-espnow/src/: lib.rs
crates/rustyfarian-esp-idf-lora/: Cargo.toml  build.rs
crates/rustyfarian-esp-idf-lora/examples/: idf_esp32s3_join.rs  idf_esp32s3_lora_uplink.rs
crates/rustyfarian-esp-idf-lora/src/: config.rs  lib.rs  lorawan.rs  mock.rs  sx1262_driver.rs
crates/rustyfarian-esp-idf-mqtt/: Cargo.toml
crates/rustyfarian-esp-idf-mqtt/examples/: idf_c3_mqtt.rs  idf_c3_mqtt_button_oled.rs  idf_c3_mqtt_led_grid.rs  idf_esp32_mqtt.rs
crates/rustyfarian-esp-idf-mqtt/src/: lib.rs
crates/rustyfarian-esp-idf-network/: Cargo.toml  LICENSE-APACHE  README.md  build.rs
crates/rustyfarian-esp-idf-network/examples/: idf_c3_connect.rs  idf_c3_connect_nonblocking.rs  idf_c3_espnow_coordinator.rs  idf_c3_espnow_scout.rs  idf_c3_espnow_scout_promisc.rs  idf_c3_espnow_sta_scout.rs  idf_c3_mqtt.rs  idf_c3_mqtt_button_oled.rs  idf_c3_mqtt_led_grid.rs  idf_c3_provision.rs  idf_c3_provision_mqtt.rs  idf_c6_connect_nonblocking_rgb.rs  idf_esp32_mqtt.rs  idf_esp32s3_join.rs  idf_esp32s3_lora_uplink.rs
crates/rustyfarian-esp-idf-network/src/: lib.rs
crates/rustyfarian-esp-idf-network/src/espnow/: mod.rs
crates/rustyfarian-esp-idf-network/src/lora/: mod.rs
crates/rustyfarian-esp-idf-network/src/mqtt/: mod.rs
crates/rustyfarian-esp-idf-network/src/ota/: flasher.rs  mod.rs
crates/rustyfarian-esp-idf-network/src/provisioning/: boot.rs  dns.rs  mod.rs  portal.rs  store.rs
crates/rustyfarian-esp-idf-network/src/wifi/: mod.rs
crates/rustyfarian-esp-idf-ota/: Cargo.toml
crates/rustyfarian-esp-idf-ota/src/: downloader.rs  flasher.rs  lib.rs
crates/rustyfarian-esp-idf-provisioning/: Cargo.toml
crates/rustyfarian-esp-idf-provisioning/examples/: idf_c3_provision.rs  idf_c3_provision_mqtt.rs
crates/rustyfarian-esp-idf-provisioning/src/: lib.rs  portal.html  portal.rs  portal_wifi_mqtt.html  store.rs
crates/rustyfarian-esp-idf-wifi/: Cargo.toml
crates/rustyfarian-esp-idf-wifi/examples/: idf_c3_connect.rs  idf_c3_connect_nonblocking.rs  idf_c6_connect_nonblocking_rgb.rs
crates/rustyfarian-esp-idf-wifi/src/: lib.rs
crates/rustyfarian-network-pure/: Cargo.toml
crates/rustyfarian-network-pure/src/: backoff.rs  lib.rs  mqtt.rs  status_colors.rs  wifi.rs
crates/wifi-pure/: Cargo.toml
crates/wifi-pure/src/: lib.rs  mock.rs
docs/: ROADMAP.md  embassy-integration-research.md  hal-naming-and-packaging-conventions.md  heltec-wifi-lora-32-v3.md  key-insights.md  project-lore.md
scripts/: build-example.sh  lib.sh  (+9 more)
(+47 files in other folders)
