[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["datenkollektiv"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datenkollektiv/rustyfarian-network"

[workspace.dependencies]
# Workspace-internal
rustyfarian-network-pure = { path = "crates/rustyfarian-network-pure" }
lora-pure = { path = "crates/lora-pure" }
wifi-pure = { path = "crates/wifi-pure" }
espnow-pure = { path = "crates/espnow-pure" }

# External dependencies
anyhow = "1.0"
log = "0.4"
nb = "1"
rgb = "0.8"

# ESP-IDF dependencies
embuild = "0.33"
esp-idf-svc = "0.52"
esp-idf-hal = "0.46"
embedded-hal = "1"

# LoRa / LoRaWAN dependencies
heapless = "0.9"
lorawan-device = { version = "0.12", default-features = false, features = ["default-crypto", "region-eu868", "region-us915"] }
lora-modulation = "0.1"
sx126x = "0.3"

# Bare-metal (esp-hal) dependencies
esp-radio = { version = "0.17", default-features = false }
esp-rtos = { version = "0.2", default-features = false }
esp-alloc = { version = "0.9" }

# Embassy async ecosystem (opt-in via the `embassy` feature on HAL crates)
embassy-executor = { version = "0.9", default-features = false }
embassy-net = { version = "0.7", default-features = false }
embassy-time = { version = "0.5", default-features = false }
static_cell = { version = "2.1" }
embedded-io-async = { version = "0.6" }

# Bare-metal debugging
esp-backtrace = { version = "0.18", default-features = false, features = ["panic-handler", "println"] }

# Cross-repo dependencies (for Wi-Fi LED status)
# Pinned to v0.4.0: v0.5.0 adopts the April 2026 esp-hal release wave (esp-println 0.17,
# esp-backtrace ≥0.19) which conflicts with this workspace's current esp-* baseline.
led-effects = { git = "https://github.com/datenkollektiv/rustyfarian-ws2812", tag = "v0.4.0" }
rustyfarian-esp-idf-ws2812 = { git = "https://github.com/datenkollektiv/rustyfarian-ws2812", tag = "v0.4.0" }
rustyfarian-esp-hal-ws2812 = { git = "https://github.com/datenkollektiv/rustyfarian-ws2812", tag = "v0.4.0", default-features = false, features = ["led-effects"] }
