[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["datenkollektiv"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datenkollektiv/rustyfarian-network"

[workspace.dependencies]
# Workspace-internal
rustyfarian-network-pure = { path = "crates/rustyfarian-network-pure" }
lora-pure = { path = "crates/lora-pure" }
wifi-pure = { path = "crates/wifi-pure" }
espnow-pure = { path = "crates/espnow-pure" }
ota-pure = { path = "crates/ota-pure" }

# External dependencies
anyhow = "1.0"
log = "0.4"
nb = "1"
rgb = "0.8"

# ESP-IDF dependencies
embuild = "0.33"
esp-idf-svc = "0.52"
esp-idf-hal = "0.46"
embedded-hal = "1"
embedded-svc = "0.29"

# LoRa / LoRaWAN dependencies
heapless = "0.9"
sha2 = { version = "0.10", default-features = false }
lorawan-device = { version = "0.12", default-features = false, features = ["default-crypto", "region-eu868", "region-us915"] }
lora-modulation = "0.1"
sx126x = "0.3"

# Bare-metal (esp-hal) dependencies — exact pins for the April 2026 release wave
# (coordinated with rustyfarian-ws2812; see docs/features/archive/esp-hal-stack-upgrade-april-2026-v1.md).
# These crates ship as a monorepo wave; mixing minor versions across them produces
# feature-unification conflicts in the Wi-Fi `embassy-net-driver` + `esp-alloc` graph.
esp-hal = { version = "=1.1.0" }
esp-radio = { version = "=0.18.0", default-features = false }
esp-rtos = { version = "=0.3.0", default-features = false }
esp-alloc = { version = "=0.10.0" }
esp-bootloader-esp-idf = { version = "=0.5.0", default-features = false }
esp-storage = { version = "=0.9.0", default-features = false }
embedded-storage = { version = "0.3" }
esp-println = { version = "=0.17.0", default-features = false }
# `smoltcp` was dropped from the workspace dependency table when `esp-radio 0.18`
# removed its `smoltcp` feature in favour of `embassy-net-driver`; no member crate
# declares it directly any more.

# Embassy async ecosystem (opt-in via the `embassy` feature on HAL crates) — exact pins
# aligned with what `esp-rtos 0.3.0` pulls transitively. Mismatched minors produce
# duplicate Signal/Channel types that don't interoperate at task boundaries.
embassy-executor = { version = "=0.10.0", default-features = false }
embassy-net = { version = "=0.8.0", default-features = false }
embassy-time = { version = "=0.5.1", default-features = false }
embassy-sync = { version = "=0.8.0", default-features = false }
static_cell = { version = "2.1" }
embedded-io-async = { version = "0.6" }

# Bare-metal debugging
esp-backtrace = { version = "=0.19.0", default-features = false, features = ["panic-handler", "println"] }

# Cross-repo dependencies — pinned to the April 2026 wave release of `rustyfarian-ws2812`.
# v0.5.0 ships the matching exact pins for esp-hal/esp-rtos/esp-radio, so the resolved
# feature graph stays unified with this workspace's bare-metal stack.
led-effects = { git = "https://github.com/datenkollektiv/rustyfarian-ws2812", tag = "v0.5.0" }
rustyfarian-esp-idf-ws2812 = { git = "https://github.com/datenkollektiv/rustyfarian-ws2812", tag = "v0.5.0" }
rustyfarian-esp-hal-ws2812 = { git = "https://github.com/datenkollektiv/rustyfarian-ws2812", tag = "v0.5.0", default-features = false, features = ["led-effects"] }
