[package]
name = "esp32-mqtt-manager"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MQTT client manager for ESP32 projects using ESP-IDF"
keywords = ["mqtt", "esp32", "embedded", "iot"]
categories = ["embedded", "network-programming"]

[dependencies]
anyhow.workspace = true
esp-idf-svc.workspace = true
log.workspace = true
