[package]
name = "esp32-wifi-manager"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wi-Fi connection manager for ESP32 projects using ESP-IDF"
keywords = ["wifi", "esp32", "embedded", "iot"]
categories = ["embedded", "network-programming"]

[dependencies]
anyhow.workspace = true
esp-idf-svc.workspace = true
led-effects.workspace = true
log.workspace = true
rgb.workspace = true
