[package]
name = "ota-pure"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-independent OTA primitives — version parsing, streaming SHA-256, metadata"
keywords = ["ota", "embedded", "no-std"]
categories = ["embedded", "no-std"]

[dependencies]
sha2 = { workspace = true, default-features = false }
heapless = { workspace = true }
