[package]
name = "provisioning-pure"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-independent provisioning form parsing, validation, and state machine"
keywords = ["provisioning", "embedded", "no-std"]
categories = ["embedded", "no-std"]

[dependencies]
heapless = { workspace = true }
wifi-pure = { workspace = true }
lora-pure = { workspace = true }
rustyfarian-network-pure = { workspace = true, default-features = false }
