[package]
name = "rustyfarian-esp-hal-provisioning"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []

esp32c3 = [
    "dep:esp-hal", "esp-hal/esp32c3",
    "dep:esp-radio", "esp-radio/esp32c3", "esp-radio/wifi", "esp-radio/esp-alloc", "esp-radio/unstable", "esp-radio/log-04",
    "dep:esp-rtos", "esp-rtos/esp32c3", "esp-rtos/esp-radio", "esp-rtos/esp-alloc",
    "dep:esp-alloc",
    "dep:esp-backtrace", "esp-backtrace/esp32c3",
    "dep:esp-bootloader-esp-idf", "esp-bootloader-esp-idf/esp32c3",
    "dep:esp-println", "esp-println/esp32c3", "esp-println/uart", "esp-println/log-04",
    "dep:esp-storage", "esp-storage/esp32c3",
    "dep:rustyfarian-esp-hal-wifi", "rustyfarian-esp-hal-wifi/esp32c3",
]
esp32c6 = [
    "dep:esp-hal", "esp-hal/esp32c6",
    "dep:esp-radio", "esp-radio/esp32c6", "esp-radio/wifi", "esp-radio/esp-alloc", "esp-radio/unstable", "esp-radio/log-04",
    "dep:esp-rtos", "esp-rtos/esp32c6", "esp-rtos/esp-radio", "esp-rtos/esp-alloc",
    "dep:esp-alloc",
    "dep:esp-backtrace", "esp-backtrace/esp32c6",
    "dep:esp-bootloader-esp-idf", "esp-bootloader-esp-idf/esp32c6",
    "dep:esp-println", "esp-println/esp32c6", "esp-println/jtag-serial", "esp-println/log-04",
    "dep:esp-storage", "esp-storage/esp32c6",
    "dep:rustyfarian-esp-hal-wifi", "rustyfarian-esp-hal-wifi/esp32c6",
]
unstable = ["esp-hal?/unstable"]
rt = ["esp-hal?/rt"]
embassy = [
    "dep:embassy-executor",
    "dep:embassy-net",
    "dep:embassy-time",
    "dep:static_cell",
    "dep:embedded-io-async",
    "esp-rtos?/embassy",
    "rustyfarian-esp-hal-wifi?/embassy",
]

[dependencies]
juggler = { workspace = true, features = ["provisioning"] }
embedded-storage = { workspace = true }
heapless = { workspace = true }
log.workspace = true
embassy-sync = { workspace = true }
rustyfarian-esp-hal-wifi = { workspace = true, optional = true }

esp-hal = { workspace = true, optional = true, features = ["unstable"] }
esp-radio = { workspace = true, optional = true }
esp-rtos = { workspace = true, optional = true }
esp-alloc = { workspace = true, optional = true }
esp-backtrace = { workspace = true, optional = true }
esp-bootloader-esp-idf = { workspace = true, optional = true }
esp-println = { workspace = true, optional = true }
esp-storage = { workspace = true, optional = true, features = ["critical-section"] }

embassy-executor = { workspace = true, optional = true }
embassy-net = { workspace = true, optional = true, features = ["dhcpv4", "proto-ipv4", "udp", "tcp", "medium-ethernet"] }
embassy-time = { workspace = true, optional = true }
static_cell = { workspace = true, optional = true }
embedded-io-async = { workspace = true, optional = true }

[[example]]
name = "hal_c3_provision_mqtt"
required-features = ["esp32c3", "rt", "embassy"]

[[example]]
name = "hal_c6_provision_mqtt"
required-features = ["esp32c6", "rt", "embassy"]
